線形補間部分の修正

--- a/30.ml/humob-SVR_ver40_cityB.ipynb
+++ b/30.ml/humob-SVR_ver40_cityB.ipynb
@@ -273,7 +273,7 @@
    "id": "82841a05",
    "metadata": {},
    "source": [
-    "#### Filter users and split the data into training data and ground truth data around d=60."
+    "#### Filter users and Split the data into training data and ground truth data around d=60."
    ]
   },
   {
@@ -596,14 +596,13 @@
     "def interpolate_missing_values(df,N):\n",
     "    \"\"\"\n",
     "    input: uid, d, t, x, yのdf、uidにつきd×tは60×48、x, y欠損値はnull\n",
-    "    output: 3時間未満の連続するx, y欠損を直近の前後のx, y値を用いて線形補完したdf\n",
+    "    output: N時間未満の連続するx, y欠損を直近の前後のx, y値を用いて線形補完したdf\n",
     "    \"\"\"\n",
     "    df_fill = df.fillna(-1).copy()  # 欠損値を一時的に -1 に変換\n",
     "    skip_list = []\n",
     "    interpolate_num = 0\n",
     "    \n",
     "    for i in range(len(df_fill)):\n",
-    "#     for i in range(20):\n",
     "        prev_valid = None\n",
     "        next_valid = None\n",
     "        time_diff = None\n",
@@ -631,8 +630,8 @@
     "#                 print(i, prev_valid, next_valid)\n",
     "                time_diff = int(next_valid[\"t\"] - prev_valid[\"t\"])\n",
     "                \n",
-    "                # 3時間未満の欠損なら線形補完\n",
-    "                if (time_diff != 0) and (time_diff < N*2):\n",
+    "                # N時間未満の欠損なら線形補完\n",
+    "                if (time_diff != 0) and (time_diff < N+2):\n",
     "                    x_diff = next_valid[\"x\"] - prev_valid[\"x\"]\n",
     "                    y_diff = next_valid[\"y\"] - prev_valid[\"y\"]\n",
     "                    \n",
@@ -645,11 +644,8 @@
     "                    # 補完済みのインデックスをリストに追加\n",
     "                    skip_list = [j for j in range(i, i + time_diff - 1)]\n",
     "                    interpolate_num += len(skip_list)\n",
-    "#                     print(skip_list)\n",
-    "#                     print(df_fill.iloc[i-1:i+time_diff+3,:])\n",
-    "                    \n",
-    "#                 else:\n",
-    "#                     print(f\"Skipping interpolation for index {i}.\")\n",
+    "\n",
+    "\n",
     "    print(f\"補完数：{interpolate_num}\")\n",
     "    # 欠損値が補完されたdfを返す\n",
     "    df_fill = df_fill[df_fill[\"x\"]!=-1]\n",
