--- a/30.ml/humob-SVR_ver40_cityB.ipynb
+++ b/30.ml/humob-SVR_ver40_cityB.ipynb
@@ -593,66 +593,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpolate_missing_values(df,N):\n",
-    "    \"\"\"\n",
-    "    input: uid, d, t, x, yのdf、uidにつきd×tは60×48、x, y欠損値はnull\n",
-    "    output: N時間未満の連続するx, y欠損を直近の前後のx, y値を用いて線形補完したdf\n",
-    "    \"\"\"\n",
-    "    df_fill = df.fillna(-1).copy()  # 欠損値を一時的に -1 に変換\n",
-    "    skip_list = []\n",
-    "    interpolate_num = 0\n",
+    "# old\n",
+    "\n",
+    "# def interpolate_missing_values(df,N):\n",
+    "#     \"\"\"\n",
+    "#     input: uid, d, t, x, yのdf、uidにつきd×tは60×48、x, y欠損値はnull\n",
+    "#     output: N時間未満の連続するx, y欠損を直近の前後のx, y値を用いて線形補完したdf\n",
+    "#     \"\"\"\n",
+    "#     df_fill = df.fillna(-1).copy()  # 欠損値を一時的に -1 に変換\n",
+    "#     skip_list = []\n",
+    "#     interpolate_num = 0\n",
     "    \n",
-    "    for i in range(len(df_fill)):\n",
-    "        prev_valid = None\n",
-    "        next_valid = None\n",
-    "        time_diff = None\n",
+    "#     for i in range(len(df_fill)):\n",
+    "#         prev_valid = None\n",
+    "#         next_valid = None\n",
+    "#         time_diff = None\n",
     "        \n",
-    "        # skip_listのインデックスは飛ばす\n",
-    "        if i in skip_list:\n",
-    "            continue\n",
+    "#         # skip_listのインデックスは飛ばす\n",
+    "#         if i in skip_list:\n",
+    "#             continue\n",
     "        \n",
-    "        # x, yが欠損の場合\n",
-    "        if df_fill.loc[i, \"x\"] == -1 and df_fill.loc[i, \"y\"] == -1:\n",
-    "            # 前の有効なデータを探す\n",
-    "            if prev_valid is None and i != 0:\n",
-    "                if df_fill.loc[i - 1, \"x\"] != -1:\n",
-    "                    prev_valid = df_fill.loc[i - 1]  # 前のデータが有効な場合\n",
+    "#         # x, yが欠損の場合\n",
+    "#         if df_fill.loc[i, \"x\"] == -1 and df_fill.loc[i, \"y\"] == -1:\n",
+    "#             # 前の有効なデータを探す\n",
+    "#             if prev_valid is None and i != 0:\n",
+    "#                 if df_fill.loc[i - 1, \"x\"] != -1:\n",
+    "#                     prev_valid = df_fill.loc[i - 1]  # 前のデータが有効な場合\n",
     "            \n",
-    "            # 次の有効なデータを探す\n",
-    "            if next_valid is None:\n",
-    "                for j in range(i + 1, len(df)):\n",
-    "                    if df_fill.loc[j, \"x\"] != -1 and df_fill.loc[j, \"y\"] != -1:\n",
-    "                        next_valid = df_fill.loc[j]\n",
-    "                        break\n",
+    "#             # 次の有効なデータを探す\n",
+    "#             if next_valid is None:\n",
+    "#                 for j in range(i + 1, len(df)):\n",
+    "#                     if df_fill.loc[j, \"x\"] != -1 and df_fill.loc[j, \"y\"] != -1:\n",
+    "#                         next_valid = df_fill.loc[j]\n",
+    "#                         break\n",
     "\n",
-    "            # 前後の有効データが見つかった場合\n",
-    "            if prev_valid is not None and next_valid is not None:\n",
-    "#                 print(i, prev_valid, next_valid)\n",
-    "                time_diff = int(next_valid[\"t\"] - prev_valid[\"t\"])\n",
+    "#             # 前後の有効データが見つかった場合\n",
+    "#             if prev_valid is not None and next_valid is not None:\n",
+    "# #                 print(i, prev_valid, next_valid)\n",
+    "#                 time_diff = int(next_valid[\"t\"] - prev_valid[\"t\"])\n",
     "                \n",
-    "                # N時間未満の欠損なら線形補完\n",
-    "                if (time_diff != 0) and (time_diff < N+2):\n",
-    "                    x_diff = next_valid[\"x\"] - prev_valid[\"x\"]\n",
-    "                    y_diff = next_valid[\"y\"] - prev_valid[\"y\"]\n",
+    "#                 # N時間未満の欠損なら線形補完\n",
+    "#                 if (time_diff != 0) and (time_diff < N+2):\n",
+    "#                     x_diff = next_valid[\"x\"] - prev_valid[\"x\"]\n",
+    "#                     y_diff = next_valid[\"y\"] - prev_valid[\"y\"]\n",
     "                    \n",
-    "                    for j in range(i, i + time_diff -1):\n",
-    "                        time_from_prev = df.loc[j, \"t\"] - prev_valid[\"t\"]\n",
-    "                        # 欠損値を線形補完\n",
-    "                        df_fill.loc[j, \"x\"] = prev_valid[\"x\"] + (x_diff / time_diff) * time_from_prev\n",
-    "                        df_fill.loc[j, \"y\"] = prev_valid[\"y\"] + (y_diff / time_diff) * time_from_prev\n",
+    "#                     for j in range(i, i + time_diff -1):\n",
+    "#                         time_from_prev = df.loc[j, \"t\"] - prev_valid[\"t\"]\n",
+    "#                         # 欠損値を線形補完\n",
+    "#                         df_fill.loc[j, \"x\"] = prev_valid[\"x\"] + (x_diff / time_diff) * time_from_prev\n",
+    "#                         df_fill.loc[j, \"y\"] = prev_valid[\"y\"] + (y_diff / time_diff) * time_from_prev\n",
     "                    \n",
-    "                    # 補完済みのインデックスをリストに追加\n",
-    "                    skip_list = [j for j in range(i, i + time_diff - 1)]\n",
-    "                    interpolate_num += len(skip_list)\n",
+    "#                     # 補完済みのインデックスをリストに追加\n",
+    "#                     skip_list = [j for j in range(i, i + time_diff - 1)]\n",
+    "#                     interpolate_num += len(skip_list)\n",
     "\n",
     "\n",
-    "    print(f\"補完数：{interpolate_num}\")\n",
-    "    # 欠損値が補完されたdfを返す\n",
-    "    df_fill = df_fill[df_fill[\"x\"]!=-1]\n",
-    "    df_fill[\"x\"] =df_fill[\"x\"].astype(int)\n",
-    "    df_fill[\"y\"] =df_fill[\"y\"].astype(int)\n",
+    "#     print(f\"補完数：{interpolate_num}\")\n",
+    "#     # 欠損値が補完されたdfを返す\n",
+    "#     df_fill = df_fill[df_fill[\"x\"]!=-1]\n",
+    "#     df_fill[\"x\"] =df_fill[\"x\"].astype(int)\n",
+    "#     df_fill[\"y\"] =df_fill[\"y\"].astype(int)\n",
     "\n",
-    "    return df_fill"
+    "#     return df_fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb04876d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 改善案\n",
+    "\n",
+    "def interpolate_missing_values(df, N):\n",
+    "    \"\"\"\n",
+    "    UIDごとに補完を行う\n",
+    "    Args:\n",
+    "        df: pandas.DataFrame, 'uid', 'd', 't', 'x', 'y' を含む\n",
+    "        N: int, 最大許容欠損時間\n",
+    "    Returns:\n",
+    "        pandas.DataFrame, 欠損値補完済みデータ\n",
+    "    \"\"\"\n",
+    "    def find_valid_points(group, i):\n",
+    "        \"\"\"欠損区間の前後の有効データを探す\"\"\"\n",
+    "        prev_valid = group.loc[:i - 1][group[\"x\"] != -1].iloc[-1] if i > 0 and group.loc[:i - 1][\"x\"].max() != -1 else None\n",
+    "        next_valid = group.loc[i + 1:][group[\"x\"] != -1].iloc[0] if i < len(group) - 1 and group.loc[i + 1:][\"x\"].max() != -1 else None\n",
+    "        return prev_valid, next_valid\n",
+    "\n",
+    "    def is_valid_to_interpolate(prev_valid, next_valid, time_diff):\n",
+    "        \"\"\"補完が適用可能かを確認\"\"\"\n",
+    "        if prev_valid is None or next_valid is None:\n",
+    "            return False\n",
+    "        if time_diff <= 0 or time_diff > N + 2:\n",
+    "            return False\n",
+    "        return True\n",
+    "\n",
+    "    def apply_interpolation(group, prev_valid, next_valid, time_diff, interpolate_count):\n",
+    "        \"\"\"線形補完を適用\"\"\"\n",
+    "        x_diff = next_valid[\"x\"] - prev_valid[\"x\"]\n",
+    "        y_diff = next_valid[\"y\"] - prev_valid[\"y\"]\n",
+    "        for t in range(1, time_diff):\n",
+    "            curr_t = prev_valid[\"t\"] + t\n",
+    "            if curr_t in group[\"t\"].values:  # 欠損区間が存在する場合のみ補完\n",
+    "                idx = group[group[\"t\"] == curr_t].index[0]\n",
+    "                group.at[idx, \"x\"] = prev_valid[\"x\"] + (x_diff / time_diff) * t\n",
+    "                group.at[idx, \"y\"] = prev_valid[\"y\"] + (y_diff / time_diff) * t\n",
+    "                interpolate_count += 1\n",
+    "        return interpolate_count\n",
+    "\n",
+    "    grouped = df.groupby(\"uid\")  # UIDごとにグループ化\n",
+    "    results = []\n",
+    "\n",
+    "    for uid, group in grouped:\n",
+    "        group = group.sort_values(by=[\"d\", \"t\"]).reset_index(drop=True)  # 時系列順にソート\n",
+    "        group[\"x\"] = group[\"x\"].fillna(-1)  # 欠損値を一時的に -1 に変換\n",
+    "        group[\"y\"] = group[\"y\"].fillna(-1)\n",
+    "\n",
+    "        interpolate_count = 0\n",
+    "        i = 0\n",
+    "        while i < len(group):\n",
+    "            # 欠損データの開始位置かどうかを判定\n",
+    "            if group.loc[i, \"x\"] != -1 or group.loc[i, \"y\"] != -1:\n",
+    "                i += 1\n",
+    "                continue\n",
+    "\n",
+    "            # 前後の有効データを取得\n",
+    "            prev_valid, next_valid = find_valid_points(group, i)\n",
+    "\n",
+    "            # 時間差を計算\n",
+    "            time_diff = int(next_valid[\"t\"] - prev_valid[\"t\"]) if prev_valid and next_valid else 0\n",
+    "\n",
+    "            # 補完条件を確認\n",
+    "            if not is_valid_to_interpolate(prev_valid, next_valid, time_diff):\n",
+    "                i += 1\n",
+    "                continue\n",
+    "\n",
+    "            # 線形補完を適用\n",
+    "            interpolate_count = apply_interpolation(group, prev_valid, next_valid, time_diff, interpolate_count)\n",
+    "\n",
+    "            # 補完が終わったら欠損区間をスキップ\n",
+    "            i += time_diff - 1\n",
+    "\n",
+    "        # 丸め処理と型変換\n",
+    "        group[\"x\"] = group[\"x\"].apply(lambda v: round(v) if v != -1 else -1).astype(int)\n",
+    "        group[\"y\"] = group[\"y\"].apply(lambda v: round(v) if v != -1 else -1).astype(int)\n",
+    "\n",
+    "        # 補完結果を収集\n",
+    "        results.append(group)\n",
+    "        print(f\"UID: {uid}, 補完数: {interpolate_count}\")\n",
+    "\n",
+    "    # 結果を結合して返す\n",
+    "    return pd.concat(results, ignore_index=True)\n"
    ]
   },
   {
