--- a/notebook/30.ml/31.SVR.ipynb
+++ b/notebook/30.ml/31.SVR.ipynb
@@ -15,9 +15,9 @@
    },
    "source": [
     "# Support Vectoer Regression\n",
-    "- SVRによる人流予測\n",
     "- 線形補間を導入\n",
-    "- 特徴量の検討"
+    "- 特徴量の付与\n",
+    "- SVRによる人流予測"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "a87e77b1",
    "metadata": {
     "execution": {
@@ -62,22 +62,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fatal: destination path 'geobleu' already exists and is not an empty directory.\n",
+      "Cloning into 'geobleu'...\n",
+      "remote: Enumerating objects: 180, done.\u001b[K\n",
+      "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+      "remote: Total 180 (delta 18), reused 21 (delta 13), pack-reused 150 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (180/180), 31.57 KiB | 2.43 MiB/s, done.\n",
+      "Resolving deltas: 100% (87/87), done.\n",
       "Processing ./geobleu\n",
       "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from geobleu==0.3) (1.26.4)\n",
-      "Requirement already satisfied: scipy in /opt/conda/lib/python3.10/site-packages (from geobleu==0.3) (1.11.4)\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from geobleu==0.4) (1.26.4)\n",
+      "Requirement already satisfied: scipy in /opt/conda/lib/python3.10/site-packages (from geobleu==0.4) (1.11.4)\n",
       "Building wheels for collected packages: geobleu\n",
       "  Building wheel for geobleu (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for geobleu: filename=geobleu-0.3-py3-none-any.whl size=5037 sha256=38b14ea1d456a8f641b3ae37c6f194864ea7ba80ecc8b4f515e19a3b8711f017\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-bkkgko2n/wheels/15/98/c8/330b8225e74188a134268a5ac7b536896fe9cc4650bc728bc9\n",
+      "\u001b[?25h  Created wheel for geobleu: filename=geobleu-0.4-py3-none-any.whl size=5012 sha256=3c7950d4e3604dc7ef4dbe81ae7c5cfb183bfc068b756bc07801a586b700f131\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-qz38gulk/wheels/46/99/ad/a7c96ae171eb3013ad8d67cb97b96cb944aa2768628699f711\n",
       "Successfully built geobleu\n",
       "Installing collected packages: geobleu\n",
       "  Attempting uninstall: geobleu\n",
       "    Found existing installation: geobleu 0.3\n",
       "    Uninstalling geobleu-0.3:\n",
       "      Successfully uninstalled geobleu-0.3\n",
-      "Successfully installed geobleu-0.3\n"
+      "Successfully installed geobleu-0.4\n"
      ]
     }
    ],
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "6d6bc9ba",
    "metadata": {
     "execution": {
@@ -124,6 +130,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec96d604",
+   "metadata": {},
+   "source": [
+    "#### Parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "275aa188",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id_start = 20000\n",
+    "user_id_end = 21999\n",
+    "# 分割する日付\n",
+    "day_split = 60"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b0dc03d",
    "metadata": {},
    "source": [
@@ -132,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ea8c381d",
    "metadata": {
     "execution": {
@@ -175,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "0e72c91d",
    "metadata": {
     "execution": {
@@ -193,76 +220,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>uid</th>\n",
-       "      <th>d</th>\n",
-       "      <th>t</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>80</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>81</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25</td>\n",
-       "      <td>83</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   uid  d   t   x    y\n",
-       "0    0  0  20  80   99\n",
-       "1    0  0  21  81   97\n",
-       "2    0  0  25  83  102"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_city_b = pd.read_csv(INPUT_PATH)\n",
     "df_city_b.head(3)"
@@ -355,8 +313,7 @@
     "# uidが20000~21999のデータを検証に利用\n",
     "df_city_b_valid = (\n",
     "    df_city_b\n",
-    "    .loc[df_city_b[\"uid\"].between(20000, 21999)]\n",
-    "\n",
+    "    .loc[df_city_b[\"uid\"].between(user_id_start, user_id_end)]\n",
     ")\n",
     "df_city_b_valid.head(3)"
    ]
@@ -371,12 +328,11 @@
     "# dが60前後でデータを分割\n",
     "df_city_b_train = (\n",
     "    df_city_b_valid\n",
-    "    .loc[df_city_b_valid[\"d\"] < 60]\n",
+    "    .loc[df_city_b_valid[\"d\"] < day_split]\n",
     ")\n",
-    "\n",
     "df_city_b_answer = (\n",
     "    df_city_b_valid\n",
-    "    .loc[df_city_b_valid[\"d\"] >= 60]\n",
+    "    .loc[df_city_b_valid[\"d\"] >= day_split]\n",
     ")"
    ]
   },
@@ -589,83 +545,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30fe30c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# old\n",
-    "\n",
-    "# def interpolate_missing_values(df,N):\n",
-    "#     \"\"\"\n",
-    "#     input: uid, d, t, x, yのdf、uidにつきd×tは60×48、x, y欠損値はnull\n",
-    "#     output: N時間未満の連続するx, y欠損を直近の前後のx, y値を用いて線形補完したdf\n",
-    "#     \"\"\"\n",
-    "#     df_fill = df.fillna(-1).copy()  # 欠損値を一時的に -1 に変換\n",
-    "#     skip_list = []\n",
-    "#     interpolate_num = 0\n",
-    "    \n",
-    "#     for i in range(len(df_fill)):\n",
-    "#         prev_valid = None\n",
-    "#         next_valid = None\n",
-    "#         time_diff = None\n",
-    "        \n",
-    "#         # skip_listのインデックスは飛ばす\n",
-    "#         if i in skip_list:\n",
-    "#             continue\n",
-    "        \n",
-    "#         # x, yが欠損の場合\n",
-    "#         if df_fill.loc[i, \"x\"] == -1 and df_fill.loc[i, \"y\"] == -1:\n",
-    "#             # 前の有効なデータを探す\n",
-    "#             if prev_valid is None and i != 0:\n",
-    "#                 if df_fill.loc[i - 1, \"x\"] != -1:\n",
-    "#                     prev_valid = df_fill.loc[i - 1]  # 前のデータが有効な場合\n",
-    "            \n",
-    "#             # 次の有効なデータを探す\n",
-    "#             if next_valid is None:\n",
-    "#                 for j in range(i + 1, len(df)):\n",
-    "#                     if df_fill.loc[j, \"x\"] != -1 and df_fill.loc[j, \"y\"] != -1:\n",
-    "#                         next_valid = df_fill.loc[j]\n",
-    "#                         break\n",
-    "\n",
-    "#             # 前後の有効データが見つかった場合\n",
-    "#             if prev_valid is not None and next_valid is not None:\n",
-    "# #                 print(i, prev_valid, next_valid)\n",
-    "#                 time_diff = int(next_valid[\"t\"] - prev_valid[\"t\"])\n",
-    "                \n",
-    "#                 # N時間未満の欠損なら線形補完\n",
-    "#                 if (time_diff != 0) and (time_diff < N+2):\n",
-    "#                     x_diff = next_valid[\"x\"] - prev_valid[\"x\"]\n",
-    "#                     y_diff = next_valid[\"y\"] - prev_valid[\"y\"]\n",
-    "                    \n",
-    "#                     for j in range(i, i + time_diff -1):\n",
-    "#                         time_from_prev = df.loc[j, \"t\"] - prev_valid[\"t\"]\n",
-    "#                         # 欠損値を線形補完\n",
-    "#                         df_fill.loc[j, \"x\"] = prev_valid[\"x\"] + (x_diff / time_diff) * time_from_prev\n",
-    "#                         df_fill.loc[j, \"y\"] = prev_valid[\"y\"] + (y_diff / time_diff) * time_from_prev\n",
-    "                    \n",
-    "#                     # 補完済みのインデックスをリストに追加\n",
-    "#                     skip_list = [j for j in range(i, i + time_diff - 1)]\n",
-    "#                     interpolate_num += len(skip_list)\n",
-    "\n",
-    "\n",
-    "#     print(f\"補完数：{interpolate_num}\")\n",
-    "#     # 欠損値が補完されたdfを返す\n",
-    "#     df_fill = df_fill[df_fill[\"x\"]!=-1]\n",
-    "#     df_fill[\"x\"] =df_fill[\"x\"].astype(int)\n",
-    "#     df_fill[\"y\"] =df_fill[\"y\"].astype(int)\n",
-    "\n",
-    "#     return df_fill"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "eb04876d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 改善案\n",
-    "\n",
     "def interpolate_missing_values(df, N):\n",
     "    \"\"\"\n",
     "    UIDごとに補完を行う\n",
@@ -764,27 +647,6 @@
    "source": [
     "INTEROILATE_N = 8\n",
     "df_city_b_train_ip = interpolate_missing_values(df_city_b_train_full,INTEROILATE_N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "id": "5f203e93",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2649706"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df_city_b_train_ip)"
    ]
   },
   {
@@ -1315,7 +1177,7 @@
     }
    ],
    "source": [
-    "## 例\n",
+    "## Example\n",
     "df_city_b_train_ip[(df_city_b_train_ip[\"uid\"] == 20000)&(df_city_b_train_ip[\"weekdays\"] == 0)].head(5)"
    ]
   },
@@ -1494,6 +1356,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a828299",
+   "metadata": {},
+   "source": [
+    "#### Result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 182,
    "id": "3dd60450",
@@ -1511,6 +1381,14 @@
    "source": [
     "print(f\"geobleu:{np.mean(list_geobleu_val)}\")\n",
     "print(f\"dtw:{np.mean(list_dtw_val)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f72e5db",
+   "metadata": {},
+   "source": [
+    "#### Check & Visualize"
    ]
   },
   {
@@ -1597,10 +1475,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12f0e16",
+   "id": "e745f72e",
    "metadata": {},
    "source": [
-    "#### Visualize"
+    "#### Visuaize Specified Uid's Trajectory"
    ]
   },
   {
