[update]csv形式のデータを入出力するように変更

--- a/notebook/10.common/11_linear_interpolate.ipynb
+++ b/notebook/10.common/11_linear_interpolate.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "INPUT_PATH = \"../../data/cityB_challengedata.csv.gz\"\n",
-    "OUTPUT_PATH = \"../../data/cityB_challengedata_interpolated.pkl\"\n",
+    "OUTPUT_PATH = \"../../data/cityB_challengedata_interpolated.csv\"\n",
     "\n",
     "# 教師データの区間数\n",
     "D_TRAIN_RANGE = 60\n",
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_full.to_pickle(OUTPUT_PATH)  "
+    "df_full.to_csv(OUTPUT_PATH, index=False)"
    ]
   }
  ],
