--- a/notebook/20.rulebase/21_rulebase.ipynb
+++ b/notebook/20.rulebase/21_rulebase.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "INPUT_PATH = \"../../data/cityB_challengedata_interpolated.pkl\"\n",
+    "INPUT_PATH = \"../../data/cityB_challengedata_interpolated.csv\"\n",
     "\n",
     "# 予測を行うuid区間（デバッグ時など、処理時間短縮が必要な場合に設定）\n",
     "UID_VALID_S = 20000\n",
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(INPUT_PATH)\n",
+    "df = pd.read_csv(INPUT_PATH)\n",
     "df"
    ]
   },
