--- a/notebook/30.ml/31.SVR_cityA.ipynb
+++ b/notebook/30.ml/31.SVR_cityA.ipynb
@@ -5,10 +5,7 @@
    "id": "69da5478",
    "metadata": {},
    "source": [
-    "# CityB Support Vectoer Regression  \n",
-    "- 線形補間を導入\n",
-    "- 特徴量の付与\n",
-    "- SVRによる人流予測"
+    "# CityA Support Vectoer Regression  "
    ]
   },
   {
@@ -135,8 +132,6 @@
    "outputs": [],
    "source": [
     "city = \"A\"\n",
-    "# user_id_start = 24001\n",
-    "# user_id_end = 27000 \n",
     "# 分割する日付\n",
     "day_split = 60"
    ]
@@ -197,7 +192,6 @@
    },
    "outputs": [],
    "source": [
-    "# BASE_PATH = \"../../../s3storage/01_public/humob-challenge-2025/middle_mart/exp001/\"\n",
     "BASE_PATH = \"../../data_2025/\"\n",
     "DATA_PATH = f\"city_A_challengedata_interpolated_n24_valid.csv\"\n",
     "INPUT_PATH = BASE_PATH + DATA_PATH"
@@ -362,28 +356,7 @@
    "id": "bbc9b65c",
    "metadata": {},
    "source": [
-    "#### ~Filter users~ and Split the data into training data and ground truth data around d=60."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8ae001a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3000"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df_city_b_valid[\"uid\"].unique())"
+    "#### Filter users~ and Split the data into training data and ground truth data around d=60."
    ]
   },
   {
