--- a/notebook/30.ml/31.SVR_cityC.ipynb
+++ b/notebook/30.ml/31.SVR_cityC.ipynb
@@ -5,7 +5,7 @@
    "id": "69da5478",
    "metadata": {},
    "source": [
-    "# CityB Support Vectoer Regression  \n",
+    "# CityC Support Vectoer Regression  \n",
     "- 線形補間を導入\n",
     "- 特徴量の付与\n",
     "- SVRによる人流予測"
@@ -135,18 +135,6 @@
    "outputs": [],
    "source": [
     "city = \"C\"\n",
-    "#CityA\n",
-    "# user_id_start = 144001\n",
-    "# user_id_end = 147001\n",
-    "\n",
-    "# CityC\n",
-    "user_id_start = 19001\n",
-    "user_id_end = 22000\n",
-    "\n",
-    "# CityD\n",
-    "# user_id_start = 14001\n",
-    "# user_id_end = 17000\n",
-    "\n",
     "# 分割する日付\n",
     "day_split = 60"
    ]
