--- a/notebook/40.submit/41.validate_submit_data_format.ipynb
+++ b/notebook/40.submit/41.validate_submit_data_format.ipynb
@@ -115,34 +115,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cf8667bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " df_city_b_train_ip_cityB.csv\n",
-      " df_city_b_train_ip_cityC.csv\n",
-      " df_city_b_train_ip_cityD.csv\n",
-      " future_predictions_df_cityB.csv\n",
-      " future_predictions_df_cityC.csv\n",
-      " future_predictions_df_cityD.csv\n",
-      " geobleu\n",
-      "'humob-SVR_ver40_cityB_'$'\\346\\234\\254\\347\\225\\252''.ipynb'\n",
-      "'humob-SVR_ver40_cityC_'$'\\346\\234\\254\\347\\225\\252''.ipynb'\n",
-      "'humob-SVR_ver40_cityD_'$'\\346\\234\\254\\347\\225\\252''.ipynb'\n",
-      "'humob-SVR_'$'\\343\\203\\207\\343\\203\\274\\343\\202\\277\\346\\225\\264\\345\\275\\242''.ipynb'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "id": "c9ffd61d",
    "metadata": {},
@@ -443,6 +415,7 @@
    "outputs": [],
    "source": [
     "df_city_answer_with_predict = (\n",
+    "    # df_city_answerのd,tに合わせる(提出用d,tは一部欠損しているため)\n",
     "    pd.merge(\n",
     "        df_city_answer,\n",
     "        df_city_future,\n",
